# DiscoveryOne

./: .gitignore  AGENTS.md  CHANGES  Cargo.toml  README.md
.agentrail/: plan.md  saga.toml
.agentrail-archive/discoveryone-3d-viewer-20260501T163332/: archive-reason.txt  saga.toml
.agentrail-archive/discoveryone-front-edit-execution-20260430T134143/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/discoveryone-ir-interp-20260428T112248/: archive-reason.txt  saga.toml
.agentrail-archive/discoveryone-ir-interp-20260428T122656/: archive-reason.txt  plan.md
.agentrail-archive/discoveryone-lex-20260427T090754/: archive-reason.txt
.agentrail-archive/discoveryone-lex-finish-20260427T120242/: archive-reason.txt  saga.toml
.agentrail-archive/discoveryone-library-grid-20260429T144511/: archive-reason.txt  plan.md
.agentrail-archive/discoveryone-minted-module-20260429T093759/: archive-reason.txt  saga.toml
.agentrail-archive/discoveryone-parse-check-20260428T110216/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/discoveryone-pipeline-2d-20260501T133758/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/discoveryone-power-front-view-demo-20260429T114557/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/discoveryone-scaffold-20260426T165748/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/discoveryone-source-loader-20260427T200154/: saga.toml  (+1 more)
crates/d1-cli/: Cargo.toml
crates/d1-cli/src/: commands.rs  interp.rs  lower.rs  main.rs
docs/: ai_agent_instructions.md  architecture.md  design.md  learnings.md  plan.md  poc-demo.md  prd.md  process.md  research.txt  status.md
examples/: aspect_on_error_fault.d1  aspect_profile_loop.d1  aspect_trace_power.d1  dowhile.d1  power.d1.json  unless.d1
scripts/: 3d-viewer-acceptance.sh  build-all.sh  check-wasm-interp-parity.sh  library-grid-acceptance.sh  minted-module-acceptance.sh  power-front-view-acceptance.sh  run-fixture.sh  run-web.sh  snapshot-web-3d-symbols.sh  snapshot-web-3d-viewer.sh  snapshot-web-dowhile-run.sh  snapshot-web-front-facet.sh  snapshot-web-library-grid-arity.sh  snapshot-web-library-grid-aspects.sh  snapshot-web-library-grid-name.sh  snapshot-web-library-grid-type.sh  snapshot-web-library-grid.sh  snapshot-web-pipeline-power-output.sh  snapshot-web-power-front-edit-run.sh  snapshot-web-run-power-2-8.sh  snapshot-web-unless-run.sh
ui/web/: Cargo.toml  Trunk.toml  build.rs  index.html
ui/web/examples/: snapshot_3d_symbols.rs  snapshot_3d_viewer.rs  snapshot_dowhile_run.rs  snapshot_front.rs  snapshot_library_grid.rs  snapshot_library_grid_arity.rs  snapshot_library_grid_aspects.rs  snapshot_library_grid_name.rs  snapshot_library_grid_type.rs  snapshot_pipeline_power_output.rs  snapshot_power_front_edit_run.rs  snapshot_run_power.rs  snapshot_unless_run.rs
ui/web/src/: components.rs  edit_state.rs  lib.rs  main.rs  pipeline.rs  run_state.rs  runtime.rs  snapshots.rs  ui.css  viewer3d.js
(+573 files in other folders)
