[package]
name = "d1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DiscoveryOne command-line driver. Reg-rs test harness; not a user-facing tool."

[[bin]]
name = "d1"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
d1-lex = { path = "../d1-lex" }
d1-source = { path = "../d1-source" }
