[package]
name = "d1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DiscoveryOne command-line driver. Reg-rs test harness; not a user-facing tool."
build = "build.rs"

[[bin]]
name = "d1"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
d1-check = { path = "../d1-check" }
d1-interp = { path = "../d1-interp" }
d1-ir = { path = "../d1-ir" }
d1-lex = { path = "../d1-lex" }
d1-parse = { path = "../d1-parse" }
d1-source = { path = "../d1-source" }
