[package]
name = "d1-web"
version = "0.1.0"
edition = "2024"
authors = ["Michael A. Wright"]
license = "MIT"
description = "DiscoveryOne web SPA. Yew + WASM facet viewer."
repository = "https://github.com/sw-vibe-coding/DiscoveryOne"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
d1-interp = { path = "../../crates/d1-interp" }
d1-source = { path = "../../crates/d1-source" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement"] }

[profile.release]
opt-level = "z"
lto = true
